# rag-quality-lab

./: .env.example  .gitignore  README.md  pyproject.toml
.specify/: feature.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
artifacts/: t019-corpus-materials-proposal.md  t019-corpus-quality-review.md
artifacts/eval/: .gitkeep  comparison.md  eval-baseline-vector.json  eval-baseline-vector.md  eval-routed-vector.json  eval-routed-vector.md
artifacts/traces/: .gitkeep
corpus/: categories.json  manifest.json
corpus/sources/: .gitkeep  azure-ai-search-chunk-documents.md  azure-ai-search-rag-overview.md  azure-ai-search-vector-relevance-ranking.md  azure-openai-prompt-engineering-techniques.md  azure-openai-structured-outputs.md  deepeval-rag-metrics.md  huggingface-evaluate-choosing-metric.md  huggingface-evaluate-considerations.md  microsoft-advanced-prompts.md  microsoft-foundry-rag-evaluators.md  nist-generative-ai-risk-profile.md  openai-api-prompt-engineering.md  openai-cost-optimization.md  openai-embedding-wikipedia-search.md  openai-evaluation-flywheel.md  openai-file-search-responses.md  openai-gpt41-prompting-guide.md  openai-gpt5-prompting-guide.md  openai-handle-rate-limits.md  openai-latency-optimization.md  openai-o-series-prompting-guide.md  openai-prompt-caching.md  openai-question-answering-embeddings.md  openai-rate-limits.md  openai-text-generation.md  openai-token-counting.md  owasp-llm01-prompt-injection.md  owasp-llm02-sensitive-information-disclosure.md  owasp-llm04-data-model-poisoning.md  owasp-llm06-excessive-agency.md  owasp-llm08-vector-embedding-weaknesses.md  qdrant-hybrid-and-multistage-queries.md  ragas-rag-metrics.md  trec-common-evaluation-measures.md  wikipedia-ir-evaluation-measures.md
docs/: architecture.md
golden/: .gitkeep  questions.json
specs/001-rag-quality-lab/: corpus-final-review.md  corpus-generation-plan.md  corpus-refinement-plan.md  data-model.md  plan.md  quickstart.md  research.md  retrieval-pressure-evaluation.md  spec.md  tasks.md  us2-learning-progress.md
src/rag_quality_lab/: __init__.py  chat_models.py  cli.py  config.py  providers.py
tests/: conftest.py
tests/contract/: test_cli_corpus_ingest.py  test_cli_corpus_inspect.py  (+4 more)
(+56 files in other folders)
